--- a/ch5_01.qmd
+++ b/ch5_01.qmd
@@ -36,8 +36,8 @@ Il est possible de ne pas faire d'hypothèses gaussiennes sur le modèle. Dans c
 Sous ces hypothèses, $\hat{\bt}$ est toujours un estimateur sans biais de $\bt$ : cela se voit directement en prenant l'espérance de @eq-mco-alt. De plus, la loi de $\bt$ n'est plus gaussienne, mais $\bt$ est asymptotiquement normal sous des hypothèses supplémentaires sur $X$. Ces hypothèses sont les suivantes. 
 
 :::{#hyp-?}
-On suppose que les variables explicatives $\bx_i$ vérifient la propriété suivante : 
-$$ \lim_{n \to \infty}\frac{1}{n}\sum_{i=1}^n \bx_i \bx_i^\top = \Sigma_x,$${#eq-hyp-mco-x}
+On suppose que les variables explicatives $\bx_i$ vérifient la propriété suivante^[On rappelle que $\bx_i$ est un vecteur ligne de taille $d$, et donc que les matrices $\bx_i^\top \bx_i$ sont bien des matrices carrées de taille $d \times d$.] : 
+$$ \lim_{n \to \infty}\frac{1}{n}\sum_{i=1}^n \bx_i^\top \bx_i = \Sigma_x,$${#eq-hyp-mco-x}
 où $\Sigma_x$ est inversible. Cette propriété s'écrit aussi $X^\top X / n \to \Sigma_x$. 
 
 :::
@@ -51,17 +51,17 @@ Sous les hypothèses précédentes, $\sqrt{n}(\hat{\bt} - \bt)$ converge en loi 
 
 :::{.proof}
   
-Rappelons que $\hat{\bt}$ peut s'écrire $\bt + (X^\top X/n)^{-1}\frac{1}{n}\sum_{i=1}^n \bx_i \varepsilon_i$. 
+Rappelons que $\hat{\bt}$ peut s'écrire $\bt + (X^\top X/n)^{-1}\frac{1}{n}\sum_{i=1}^n \bx_i^\top \varepsilon_i$. 
 Pour montrer que $\sqrt{n}(\hat{\bt}-\bt)$ converge, il suffit donc de démontrer que 
-$$\sqrt{n}\frac{1}{n}\sum_{i=1}^n \bx_i \varepsilon_i $${#eq-proof-tcl-mco}
-converge en loi vers $N(0,\Sigma_x^2)$ : comme le terme $(X^\top X/n)^{-1}$ converge vers $\Sigma_x^{-1}$ par hypothèse, la limite de $\sqrt{n}(\hat{\bt} - \bt)$ sera bien $N(0,\Sigma_x^{-1}\Sigma_x\Sigma_x^{-1}) = N(0,\Sigma_x^{-1})$. Malheureusement, on ne peut pas directement appliquer le TCL classique à @eq-proof-tcl-mco : en effet, les variables aléatoires $X_i = \bx_i \varepsilon_i$ ne sont pas identiquement distribuées. On doit pour cela appliquer une version plus générale du TCL, que j'ai écrite en appendice (@thm-mann-wald). Pour appliquer ce théorème en toute rigueur, on a besoin d'une hypothèse supplémentaire sur les $\bx_i$ que je n'ai pas mentionnée --- c'est une hypothèse technique^[Il faut que la quantité $\max_{j=1, \dotsc, n}|\bx_j|^2 / \sum |\bx_i|^2$ tende vers zéro lorsque $n\to\infty$. Cela revient à dire que toute l'information apportée par les $x_i$ n'est pas concentrée sur une seule observation ou sur un très petit nombre d'observations.  ].
+$$\sqrt{n}\frac{1}{n}\sum_{i=1}^n \bx_i^\top \varepsilon_i $${#eq-proof-tcl-mco}
+converge en loi vers $N(0,\Sigma_x^2)$ : comme le terme $(X^\top X/n)^{-1}$ converge vers $\Sigma_x^{-1}$ par hypothèse, la limite de $\sqrt{n}(\hat{\bt} - \bt)$ sera bien $N(0,\Sigma_x^{-1}\Sigma_x\Sigma_x^{-1}) = N(0,\Sigma_x^{-1})$. Malheureusement, on ne peut pas directement appliquer le TCL classique à @eq-proof-tcl-mco : en effet, les variables aléatoires $X_i = \bx_i^\top \varepsilon_i$ ne sont pas identiquement distribuées. On doit pour cela appliquer une version plus générale du TCL, que j'ai écrite en appendice (@thm-mann-wald). Pour appliquer ce théorème en toute rigueur, on a besoin d'une hypothèse supplémentaire sur les $\bx_i$ que je n'ai pas mentionnée --- c'est une hypothèse technique^[Il faut que la quantité $\max_{j=1, \dotsc, n}|\bx_j|^2 / \sum |\bx_i|^2$ tende vers zéro lorsque $n\to\infty$. Cela revient à dire que toute l'information apportée par les $x_i$ n'est pas concentrée sur une seule observation ou sur un très petit nombre d'observations.  ].
 
 
 
 :::
 
 
-[^1]:Celui qui est biaisé, contrairement à $\hat{\sigma}^2_n$. 
+
 
 ## Ellipsoïde de confiance
 
@@ -86,7 +86,7 @@ Malheureusement, cette région nécessite de connaître $\sigma$. Lorsqu'on ne l
 Toujours sous le modèle linéaire gaussien, nous avons vu que la loi de $|\sigma^{-1}(X^{\top} X)^{1/2}(\hat{\bt} - \bt)|^2$ est une $\chi_2(d)$, et que la loi de $(n-d)\hat{\sigma}_n^2\sigma^{-2}$
 est une $\chi_2(n-d)$. Par conséquent, la variable aléatoire 
 $$\frac{|(X^\top X)^{1/2}(\hat{\bt} - \bt)|^2}{\hat{\sigma}_n^2}$$
-a pour loi le rapport de lois du $\chi_2$ indépendantes de paramètres $d$ et $n-d$. Cette loi est connue : elle est égale à $(n-d)/d$ fois une *loi de Fisher* dont les propriétés sont données dans @sec-fisher. Cela donne directement le théorème suivant. 
+a pour loi le rapport de lois du $\chi_2$ indépendantes de paramètres $d$ et $n-d$. Cette loi est connue : elle est égale à $d$ fois une *loi de Fisher* dont les propriétés sont données dans @sec-fisher. Cela donne directement le théorème suivant. 
 
 :::{#thm-ellipse}
 
@@ -95,7 +95,7 @@ a pour loi le rapport de lois du $\chi_2$ indépendantes de paramètres $d$ et $
 Soit $\hat{\bt}$ l'estimateur des MCO dans un modèle linéaire gaussien. 
 
 Si $f_{d,n-d,1-\alpha}$ est le quantile d'ordre $1-\alpha$ d'une loi $\mathscr{F}_{d,n-d}$, alors la région 
-$$ \left\lbrace \theta \in \mathbb{R}^d : \frac{|(X^\top X)^{1/2}(\hat{\bt} - \bt) |^2 / d}{\hat{\sigma}_n^2 / (n-d)} <  f_{d,n-d,1-\alpha} \right\rbrace $$
+$$ \left\lbrace \theta \in \mathbb{R}^d : \frac{|(X^\top X)^{1/2}(\hat{\bt} - \bt) |^2 / d}{\hat{\sigma}_n^2 } <  f_{d,n-d,1-\alpha} \right\rbrace $$
 est une région de confiance de niveau $1-\alpha$ pour $\bt$. 
 
 Lorsque le modèle n'est pas gaussien, mais qu'il vérifie les hypothèses de la section @sec-mlgen, le même résultat est valable mais le niveau de confiance de la région ci-dessus est *asymptotiquement* égal à $1-\alpha$. 
