--- a/problemes.qmd
+++ b/problemes.qmd
@@ -20,20 +20,17 @@ $P\left(X_i=Y_i\right)=0$
 et en déduire que sous $H_0$, on a
 $P\left(X_i > Y_i\right) = \frac{1}{2}.$
 2. On pose $N = \sum_{i = 1}^n \mathbf{1}_{X_i>Y_i}.$ Quelle est la loi de $N$ sous $H_0$ ?
-3. En déduire que le test défini par la région critique
+3. En déduire que le test défini par la région de rejet
 $$\left\{\left|N-\frac{n}{2}\right| \geq c\right\}$$
 permet de construire un test de niveau inférieur à $\alpha \in \,]0,1[$ de $H_0$ contre $H_1$ pour un choix $c=c(\alpha) >0$ que l'on précisera. Parmi tous les choix possibles de $c(\alpha)$, lequel préférer ?
-4. Les moyennes générales de la première et de la deuxième année de cinquième de $12$ redoublants ont été relevées:\\[5mm]
-\begin{tabular}{*{13}{l|}}
-\hline
-\multicolumn{1}{|l|}{Elève} & 1 & 2 & 3 & 4  & 5 & 6 & 7 & 8 & 9 & 10 & 11  & 12\\
-\hline
-\multicolumn{1}{|l|}{Année 1} & 8,2 & 6,9 & 7,0 & 6,2  & 6,4 & 6,3 & 7,2 & 7,6 & 7,8 & 6,4 & 7,3 & 8\\
-\hline
-\multicolumn{1}{|c|}{Année 2} & 10,1 & 6,7 & 7,9 & 10,5 & 5,3 & 8,3  & 9,6 & 11,4 & 7,9  & 9,9 & 10,0 &  9,8\\
-\hline
-\end{tabular}\\[3mm]
-Le redoublement a-t-il une influence sur la moyenne générale, sachant que le quantile d'ordre $0.975$ d'une $\mathscr{B}(12,0.5)$ est $9$.
+1. Les moyennes générales de la première et de la deuxième année de cinquième de $12$ redoublants ont été relevées:
+
+| Élève   |1|2|3|4|5|6|7|8|9|10|11|12|
+|---------|-|-|-|-|-|-|-|-|-|-|-|-|
+| Année 1 |12.0|9.5|13.0|10.0|8.5|11.0|7.8|14.0|5.0|12.0|12.0|8.6|
+| Année 2 |6.1|14.0|7.3|7.3|13.0|17.0|14.0|9.2|12.0|14.0|8.8|8.8|
+
+Le redoublement a-t-il une influence sur la moyenne générale ? ^[Le quantile d'ordre $0.975$ d'une $\mathscr{B}(12,0.5)$ est $9$.]
 
 :::
 
